[package]
name = "lyrian_wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lyrian = { git = "https://github.com/LyrianBot/lyrian.git", branch = "main" }
wasm-bindgen = "0.2.78"
getrandom = { version = "0.2.3", features = ["js"] }
